--- a/config/locales/views/admin/assortments/en.yml
+++ b/config/locales/views/admin/assortments/en.yml
@@ -3,8 +3,5 @@ en:
     assortments:
       form:
         name: 'Name'
-        cancel: 'Cancel'
-        save: 'Save'
-      assortment:
-        edit: 'Edit'
-        delete: 'Delete'
+      assortments:
+        no_assortments: 'No assortments'
