--- a/config/locales/views/admin/products/en.yml
+++ b/config/locales/views/admin/products/en.yml
@@ -5,5 +5,9 @@ en:
         name: 'Name'
         description: 'Description'
         assortment: 'Assortment'
+        price: 'Price'
+        color: 'Color'
+        size: 'Size'
+        in_stock: 'In Stock'
       show:
         back: 'Back'
