Storry:18 new gem and some changes

--- a/config/locales/views/products/en.yml
+++ b/config/locales/views/products/en.yml
@@ -4,3 +4,5 @@ en:
       back_to_products: 'Back to products'
       submit: 'Leave comment'
       to_wishes: 'Add to wishes'
+    show_left_panell:
+      to_wishes: 'Add to wishes'
