Story:19 show and edit

--- a/config/locales/views/admin/products/en.yml
+++ b/config/locales/views/admin/products/en.yml
@@ -9,5 +9,6 @@ en:
         color: 'Color'
         size: 'Size'
         in_stock: 'In Stock'
+        picture: 'Picture'
       show:
         back: 'Back'
