--- a/config/locales/views/admin/products/en.yml
+++ b/config/locales/views/admin/products/en.yml
@@ -1,6 +1,8 @@
 en:
   admin:
     products:
+      products:
+        no_products: 'No Products'
       form:
         name: 'Name'
         description: 'Description'
